Fixed typos , filenames , icons and so on

--- a/adynamics3/index.html
+++ b/adynamics3/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>ADYNAMICS</title>
+  <title>Adynamics</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta content="" name="keywords" />
   <meta content="" name="description" />
@@ -227,7 +227,7 @@
       </div>
       <div class="col-lg-5 px-5 text-end">
         <div class="h-100 d-inline-flex align-items-center me-4">
-          <small class="fa fa-phone-alt text-primary me-2"></small>
+          <small class="fa-solid fa-phone text-primary me-2"></small>
           <small>+91-8296076136</small>
         </div>
         <div class="h-100 d-inline-flex align-items-center mx-n2">
@@ -255,10 +255,10 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto p-4 p-lg-0">
         <a href="./index.html" class="nav-item nav-link active">Home</a>
-        <a href="./testComponents/about-hero.html" class="nav-item nav-link">About</a>
+        <a href="./testComponents/about.html" class="nav-item nav-link">About</a>
         <a href="./testComponents/flying.html" class="nav-item nav-link">Flying</a>
         <div class="dropdown">
-          <a href="./testComponents/clasess.html" class="nav-item nav-link nav-dropdown">Classes</a>
+          <a href="./testComponents/classes.html" class="nav-item nav-link nav-dropdown">Classes</a>
           <div class="dropdown-menu">
             <a href="./inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
             <a href="./inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
@@ -482,14 +482,10 @@
               <a href="#0" data-date="09/07/2014" class="cd-h-timeline__date">Type Rating
               </a>
             </li>
-            <!-- <li><a href="#0" data-date="30/08/2014" class="cd-h-timeline__date">CPL Training</a></li> -->
-            <!-- <li><a href="#0" data-date="15/09/2014" class="cd-h-timeline__date">15 Sep</a></li> -->
             <li>
               <a href="#0" data-date="01/11/2014" class="cd-h-timeline__date">Airline Preparation
               </a>
             </li>
-            <!-- <li><a href="#0" data-date="10/12/2014" class="cd-h-timeline__date">10 Dec</a></li> -->
-            <!-- <li><a href="#0" data-date="19/01/2015" class="cd-h-timeline__date">29 Jan</a></li> -->
             <li>
               <a href="#0" data-date="03/03/2015" class="cd-h-timeline__date">END</a>
             </li>
@@ -1930,7 +1926,7 @@
                 <li><a href="#">DGCA Ground Classes</a></li>
                 <li><a href="#">Radio Telephony (RTR) Class</a></li>
                 <li><a href="#">NIOS Prep Class</a></li>
-                <li><a href="#">cpl conversion</a></li>
+                <li><a href="#">CPL Conversion</a></li>
                 <li><a href="#">sacAA CPL</a></li>
               </ul>
             </div>
@@ -1944,15 +1940,15 @@
               <h3 class="f-title f_600 t_color f_size_18">Help</h3>
               <ul class="list-unstyled f_list">
                 <li>
-                  <a href="./testComponents/about-hero.html">About us</a>
+                  <a href="./testComponents/about.html">About us</a>
                 </li>
                 <li><a href="#testi">Testimonial</a></li>
-                <li><a href="#teamm">Team</a></li>
+                <!-- <li><a href="#teamm">Team</a></li> -->
                 <li><a href="#demo">Demo video</a></li>
                 <li>
-                  <a href="./testComponents/about-hero.html">Contact</a>
+                  <a href="./testComponents/about.html">Contact</a>
                 </li>
-                <li><a href="./testComponents/clasess.html">Training</a></li>
+                <li><a href="./testComponents/classes.html">Training</a></li>
               </ul>
             </div>
           </div>
