--- a/adynamics3/testComponents/flying.html
+++ b/adynamics3/testComponents/flying.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Adynamics</title>
     <!-- Favicon -->
-    <link href="./img/favicon.ico" rel="icon" />
+    <link href="../img/adynamicsLogo.png" rel="icon" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -53,7 +53,7 @@
             </div>
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
-                    <small class="fa fa-phone-alt text-primary me-2"></small>
+                    <small class="fa-solid fa-phone text-primary me-2"></small>
                     <small>+91-8296076136</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
@@ -80,10 +80,10 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="../index.html" class="nav-item nav-link ">Home</a>
-                <a href="../testComponents/about-hero.html" class="nav-item nav-link ">About</a>
+                <a href="../testComponents/about.html" class="nav-item nav-link ">About</a>
                 <a href="../testComponents/flying.html" class="nav-item nav-link active">Flying</a>
                 <div class="dropdown">
-                    <a href="../testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
+                    <a href="../testComponents/classes.html" class="nav-item nav-link nav-dropdown ">Classes</a>
                     <div class="dropdown-menu">
                         <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
                         <a href="../inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
@@ -758,23 +758,6 @@
             <path id="crete"
                 d="M516.76,230.59l1.63,0.05l0.68,1.01h2.37l1.58-0.58l0.53,0.64l-1.05,1.38l-4.63,0.16l-0.84-1.11l-0.89-0.53L516.76,230.59L516.76,230.59z" />
 
-
-               
-
-            <!-- Markers -->
-            <!-- <image id="marker1" class="marker" x="145" y="145" width="20" height="20" xlink:href="../img/Location.svg">
-            </image>
-            <image id="marker2" class="marker" x="345" y="145" width="20" height="20" xlink:href="../img/Location.svg">
-            </image>
-            <image id="marker3" class="marker" x="545" y="145" width="20" height="20" xlink:href="../img/Location.svg">
-            </image>
-            <image id="marker4" class="marker" x="145" y="145" width="200" height="20" xlink:href="../img/Location.svg">
-            </image>
-            <image id="marker5" class="marker" x="345" y="145" width="20" height="20" xlink:href="../img/Location.svg">
-            </image>
-            <image id="marker6" class="marker" x="545" y="145" width="20" height="20" xlink:href="../img/Location.svg">
-            </image> -->
-
             <!-- India marker-->
             <circle class="ripple ripple1" cx="670" cy="285" r="30"></circle>
             <circle class="ripple ripple2" cx="670" cy="285" r="15"></circle>
@@ -1031,60 +1014,7 @@
         </div>
     </div>
 
-    <div class="mobile-view">
-
-        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <h2>CPL cum Type Rating in Tunisia</h2>
-                    <img src="../assets/img/tunisia.png" class="d-block w-100" alt="..." style="padding: 10px 30px">
-                    <a href="../inidvidual-clases/cpltunisia.html">Learn More</a>
-                </div>
-                <div class="carousel-item">
-                    <h2>FAA CPL Training in USA</h2>
-                    <img src="../assets/img/usa.png" class="d-block w-100" alt="..." style="padding: 75px 10px">
-                    <a href="../inidvidual-clases/cpltaring.html">Learn More</a>
-                </div>
-                <div class="carousel-item">
-                    <h2>DGCA CPL Conversion in India</h2>
-                    <img src="../assets/img/india.png" class="d-block w-100" alt="..." style="padding: 15px 0">
-                    <a href="../inidvidual-clases/CONVESION.html">Learn More</a>
-                </div>
-                <div class="carousel-item">
-                    <h2>B737 Type Rating in Morocco</h2>
-                    <img src="../assets/img/morocco.png" class="d-block w-100" alt="..." style="padding: 10px 10px">
-                    <a href="../inidvidual-clases/cplmorocco.html">Learn More</a>
-                </div>
-                <div class="carousel-item">
-                    <h2>ANAC CPL Training in Argentina</h2>
-                    <img src="../assets/img/argentina.png" class="d-block w-100" alt="..." style="padding: 10px 30px">
-                    <a href="../inidvidual-clases/cplargentina.html">Learn More</a>
-                </div>
-                <div class="carousel-item">
-                    <h2>SACAA CPL Training in South Africa</h2>
-                    <img src="../assets/img/south_africa.png" class="d-block w-100" alt="..." style="padding: 75px 10px">
-                    <a href="../inidvidual-clases/cplsouth.html">Learn More</a>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </div>
-
-
-    <!-- cource end  -->
-
     <!-- demo-class start -->
-
-
 
     <section class="demo-class-section imSection-bg" style="background-color:transparent">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s"
@@ -1159,7 +1089,7 @@
                 <li><a href="#">DGCA Ground Classes</a></li>
                 <li><a href="#">Radio Telephony (RTR) Class</a></li>
                 <li><a href="#">NIOS Prep Class</a></li>
-                <li><a href="#">cpl conversion</a></li>
+                <li><a href="#">CPL Conversion</a></li>
                 <li><a href="#">sacAA CPL</a></li>
               </ul>
             </div>
@@ -1169,12 +1099,12 @@
               style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
               <h3 class="f-title f_600 t_color f_size_18">Help</h3>
               <ul class="list-unstyled f_list">
-                <li><a href="./testComponents/about-hero.html">About us</a></li>
+                <li><a href="./testComponents/about.html">About us</a></li>
                 <li><a href="#testi">Testimonial</a></li>
                 <li><a href="#teamm">Team</a></li>
                 <li><a href="#demo">Demo video</a></li>
-                <li><a href="./testComponents/about-hero.html">Contact</a></li>
-                <li><a href="./testComponents/clasess.html">Training</a></li>
+                <li><a href="./testComponents/about.html">Contact</a></li>
+                <li><a href="./testComponents/classes.html">Training</a></li>
               </ul>
             </div>
           </div>
