--- a/adynamics3/courses.html
+++ b/adynamics3/courses.html
@@ -54,10 +54,10 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto p-4 p-lg-0">
                         <a href="/adynamics3/index.html" class="nav-item nav-link active">Home</a>
-                        <a href="/adynamics3/testComponents/about-hero.html" class="nav-item nav-link ">About</a>
+                        <a href="/adynamics3/testComponents/about.html" class="nav-item nav-link ">About</a>
                         <a href="/adynamics3/testComponents/flying.html" class="nav-item nav-link">Flying</a>
                         <div class="dropdown">
-                            <a href="/adynamics3/testComponents/clasess.html"
+                            <a href="/adynamics3/testComponents/classes.html"
                                 class="nav-item nav-link nav-dropdown ">Classes</a>
                             <div class="dropdown-menu">
                                 <a href="/adynamics3/inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
@@ -180,7 +180,7 @@
                     <h4 class="text-white mb-4">Get In Touch</h4>
                     <h2 class="text-primary mb-4"><i class="fa fa-car text-white me-2"></i>Drivin</h2>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                    <p class="mb-2"><i class="fa-solid fa-phone me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
