--- a/adynamics3/enquiry.html
+++ b/adynamics3/enquiry.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enquiry</title>
     <!-- Favicon -->
-    <link href="./img/favicon.ico" rel="icon" />
+    <link href="./img/adynamicsLogo.png" rel="icon" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -50,7 +50,7 @@
             </div>
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
-                    <small class="fa fa-phone-alt text-primary me-2"></small>
+                    <small class="fa-solid fa-phone text-primary me-2"></small>
                     <small>+91-8296076136</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
@@ -77,10 +77,10 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto p-4 p-lg-0">
                         <a href="./index.html" class="nav-item nav-link">Home</a>
-                        <a href="./testComponents/about-hero.html" class="nav-item nav-link ">About</a>
+                        <a href="./testComponents/about.html" class="nav-item nav-link ">About</a>
                         <a href="./testComponents/flying.html" class="nav-item nav-link">Flying</a>
                         <div class="dropdown">
-                            <a href="./testComponents/clasess.html" class="nav-item nav-link nav-dropdown">Classes</a>
+                            <a href="./testComponents/classes.html" class="nav-item nav-link nav-dropdown">Classes</a>
                             <div class="dropdown-menu">
                                 <a href="./inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
                                 <a href="./inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
@@ -118,7 +118,7 @@
                 <input type="text" id="name" name="name" placeholder="Name" required>
             </div>
             <div class="input-container">
-                <span><i class="fa fa-phone"></i></span>
+                <span><i class="fa-solid fa-phone"></i></span>
                 <input type="tel" id="phone" name="phone" placeholder="Phone" required>
             </div>
             <div class="input-container">
@@ -177,7 +177,7 @@
                 <li><a href="#">DGCA Ground Classes</a></li>
                 <li><a href="#">Radio Telephony (RTR) Class</a></li>
                 <li><a href="#">NIOS Prep Class</a></li>
-                <li><a href="#">cpl conversion</a></li>
+                <li><a href="#">CPL Conversion</a></li>
                 <li><a href="#">sacAA CPL</a></li>
               </ul>
             </div>
@@ -187,12 +187,12 @@
               style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
               <h3 class="f-title f_600 t_color f_size_18">Help</h3>
               <ul class="list-unstyled f_list">
-                <li><a href="./testComponents/about-hero.html">About us</a></li>
+                <li><a href="./testComponents/about.html">About us</a></li>
                 <li><a href="#testi">Testimonial</a></li>
                 <li><a href="#teamm">Team</a></li>
                 <li><a href="#demo">Demo video</a></li>
-                <li><a href="./testComponents/about-hero.html">Contact</a></li>
-                <li><a href="./testComponents/clasess.html">Training</a></li>
+                <li><a href="./testComponents/about.html">Contact</a></li>
+                <li><a href="./testComponents/classes.html">Training</a></li>
               </ul>
             </div>
           </div>
