--- a/adynamics3/inidvidual-clases/cplsouth.html
+++ b/adynamics3/inidvidual-clases/cplsouth.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>ADYNAMICS</title>
+  <title>Adynamics</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta content="" name="keywords" />
   <meta content="" name="description" />
 
   <!-- Favicon -->
-  <link href="img/favicon.ico" rel="icon" />
+  <link href="../img/adynamicsLogo.png" rel="icon" />
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,6 +19,7 @@
   <!-- Icon Font Stylesheet -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 
   <!-- Libraries Stylesheet -->
   <link href="../lib/animate/animate.min.css" rel="stylesheet" />
@@ -46,7 +47,7 @@
   </div>
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-    <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <a href="../index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
       <img src="../img/adynamicsLogo.png" width="180px" height="auto" alt="" />
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -56,12 +57,12 @@
       <div class="navbar-nav ms-auto p-4 p-lg-0">
 
         <a href="../index.html" class="nav-item nav-link active">Home</a>
-        <a href="../testComponents/about-hero.html" class="nav-item nav-link ">About</a>
+        <a href="../testComponents/about.html" class="nav-item nav-link ">About</a>
         <a href="../testComponents/flying.html" class="nav-item nav-link">Flying</a>
 
 
         <div class="dropdown">
-          <a href="/adynamics3/testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
+          <a href="/adynamics3/testComponents/classes.html" class="nav-item nav-link nav-dropdown ">Classes</a>
           <div class="dropdown-menu">
             <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
             <a href="../inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
@@ -661,7 +662,7 @@
                 <li><a href="#">DGCA Ground Classes</a></li>
                 <li><a href="#">Radio Telephony (RTR) Class</a></li>
                 <li><a href="#">NIOS Prep Class</a></li>
-                <li><a href="#">cpl conversion</a></li>
+                <li><a href="#">CPL Conversion</a></li>
                 <li><a href="#">
                     sacAA CPL</a></li>
               </ul>
@@ -672,12 +673,12 @@
               style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
               <h3 class="f-title f_600 t_color f_size_18">Help</h3>
               <ul class="list-unstyled f_list">
-                <li><a href="./testComponents/about-hero.html">About us</a></li>
+                <li><a href="./testComponents/about.html">About us</a></li>
                 <li><a href="#testi">Testimonial</a></li>
                 <li><a href="#teamm">Team</a></li>
                 <li><a href="#demo">Demo video</a></li>
-                <li><a href="./testComponents/about-hero.html">Contact</a></li>
-                <li><a href="./testComponents/clasess.html">Training</a></li>
+                <li><a href="./testComponents/about.html">Contact</a></li>
+                <li><a href="./testComponents/classes.html">Training</a></li>
               </ul>
             </div>
           </div>
