--- a/adynamics3/testComponents/flying.html
+++ b/adynamics3/testComponents/flying.html
@@ -33,7 +33,6 @@
     <link rel="stylesheet" href="../check.css">
     <link rel="stylesheet" href="../css/course-details.css" />
     <link rel="stylesheet" href="../css/globe.css">
-    <link rel="stylesheet" href="../scss/globe.scss">
     <link rel="stylesheet" href="../css2/style.css">
 </head>
 
@@ -85,10 +84,10 @@
                 <div class="dropdown">
                     <a href="../testComponents/classes.html" class="nav-item nav-link nav-dropdown ">Classes</a>
                     <div class="dropdown-menu">
-                        <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                        <a href="../inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
-                        <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
-                        <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
+                        <a href="../individual-classes/pretyping.html">A320 Pre Type Rating Class</a>
+                        <a href="../individual-classes/dgcaground.html">DGCA Ground Classes</a>
+                        <a href="../individual-classes/RTR.html">Radio Telephony (RTR) Class</a>
+                        <a href="../individual-classes/niosclasses.html">NIOS Prep Class</a>
                     </div>
                 </div>
                 <a href="../blog/homepageblog.html" class="nav-item nav-link">blog</a>
@@ -828,7 +827,7 @@
                         <img class="img-fluid border-r10" src="../img/DgcaCpl2.png" alt="" />
                         <div class="courses-overlay">
                             <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                href="../inidvidual-clases/CONVESION.html">Read More</a>
+                                href="../individual-classes/conversion.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -859,7 +858,7 @@
                         <img class="img-fluid border-r10" src="../img/flying_cpltraing.png" alt="" />
                         <div class="courses-overlay">
                             <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                href="../inidvidual-clases/cpltaring.html">Read More</a>
+                                href="../individual-classes/cpltraining.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -891,7 +890,7 @@
                         <img class="img-fluid border-r10" src="../img/flying_southafrica.png" alt="" />
                         <div class="courses-overlay">
                             <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                href="../inidvidual-clases/cplsouth.html">Read More</a>
+                                href="../individual-classes/cplsouth.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -922,7 +921,7 @@
                         <img class="img-fluid border-r10" src="../img/engineer-working-with-airplane.jpg" alt="" />
                         <div class="courses-overlay">
                             <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                href="../inidvidual-clases/cplmorocco.html">Read More</a>
+                                href="../individual-classes/cplmorocco.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -954,7 +953,7 @@
                         <img class="img-fluid border-r10" src="../img/interior.jpg" alt="" />
                         <div class="courses-overlay">
                             <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                href="../inidvidual-clases/cplargentina.html">Read More</a>
+                                href="../individual-classes/cplargentina.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -981,7 +980,7 @@
                             <img class="img-fluid border-r10" src="../img/cource1.png" alt="" />
                             <div class="courses-overlay">
                                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                    href="../inidvidual-clases/cpltunisia.html">Read More</a>
+                                    href="../individual-classes/cpltunisia.html">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -1005,7 +1004,7 @@
                             <img class="img-fluid border-r10" src="../img/cource1.png" alt="" />
                             <div class="courses-overlay">
                                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                    href="../inidvidual-clases/cpltunisia.html">Read More</a>
+                                    href="../individual-classes/cpltunisia.html">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -1040,8 +1039,8 @@
                         best starting point for your English learning journey.
                     </p>
                     <div class="courses-overlay">
-                        <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                            href="../inidvidual-clases/CONVESION.html">Read
+                        <a class="btn btn-primary border-2 courses-btn-bg"
+                            href="../individual-classes/conversion.html">Read
                             More</a>
                     </div>
                 </div>
@@ -1083,8 +1082,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s"
               style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Courses</h3>
-              <ul class="list-unstyled f_list">
+              <h3 class="f_600 t_color f_size_18">Courses</h3>
+              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;" >
                 <li><a href="#">A320 Pre Type Rating Class</a></li>
                 <li><a href="#">DGCA Ground Classes</a></li>
                 <li><a href="#">Radio Telephony (RTR) Class</a></li>
@@ -1097,8 +1096,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s"
               style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Help</h3>
-              <ul class="list-unstyled f_list">
+              <h3 class="f_600 t_color f_size_18">Help</h3>
+              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;" >
                 <li><a href="./testComponents/about.html">About us</a></li>
                 <li><a href="#testi">Testimonial</a></li>
                 <li><a href="#teamm">Team</a></li>
