--- a/adynamics3/index.html
+++ b/adynamics3/index.html
@@ -19,6 +19,7 @@
   <!-- Icon Font Stylesheet -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 
   <!-- Libraries Stylesheet -->
   <link href="./lib/animate/animate.min.css" rel="stylesheet" />
@@ -37,7 +38,6 @@
   <link rel="stylesheet" href="./scss/bootstrap/scss/_carousel.scss" />
   <link rel="stylesheet" href="./check.css" />
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <style>
     .list {
       position: relative;
@@ -260,10 +260,10 @@
         <div class="dropdown">
           <a href="./testComponents/classes.html" class="nav-item nav-link nav-dropdown">Classes</a>
           <div class="dropdown-menu">
-            <a href="./inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-            <a href="./inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
-            <a href="./inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
-            <a href="./inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
+            <a href="./individual-classes/pretyping.html">A320 Pre Type Rating Class</a>
+            <a href="./individual-classes/dgcaground.html">DGCA Ground Classes</a>
+            <a href="./individual-classes/RTR.html">Radio Telephony (RTR) Class</a>
+            <a href="./individual-classes/niosclasses.html">NIOS Prep Class</a>
           </div>
         </div>
         <a href="./blog/homepageblog.html" class="nav-item nav-link">blog</a>
@@ -287,51 +287,31 @@
   <!--- #HERO --->
   <!-- <section class="section hero" id="home" aria-label="hero">
     <div class="container bottom-height" style=" padding-right: 0px;">
-
       <div class="hero-content">
-
         <p class="hero-subtitle has-before ">Welcome to ADynamics</p>
-
         <div class="typewriter">
           <h1 class="h1 hero-title">Ready to Awaken the Aviator in You?</h1>
         </div>
-
         <p class=" hero-text" style="font-size: 1rem;">
           Elevate your pilot journey with ADynamics – where a comprehensive curriculum, experienced instructors, and
           global partnerships converge. From in-depth training to seamless career support, we're your catalyst for
           aviation success.
         </p>
-
         <div class="btn-group">
           <a href="#" class="btn btn-primary" style="border-end-end-radius: 50px; background-color: #49aaaa;">Discover
             More</a>
-
           <button class="flex-btn" onclick="playDemoClass()">
             <div class="btn-icon" style="background-color: #49aaaa;">
               <ion-icon name="play" aria-hidden="true"></ion-icon>
             </div>
-
             <span class="span" style="color: #49aaaa;">Demo Class</span>
           </button>
         </div>
-
       </div>
-
-
-
       <figure class="has-before hero-banner che" style="--width: 1050; --height: 1050;  padding: 0px;">
         <img src="./img/check.JPG" width="400px" height="100px" alt="hero banner" class="img-cover  hero-banner resize"
           style="border-radius: 50%; width: 100%;  ">
       </figure>
-
-
-
-
-
-
-
-
-
     </div>
   </section> -->
   <section class="hero-container">
@@ -1423,7 +1403,7 @@
   <!-- end time line -->
 
   <!-- Courses Start -->
-  <div class="container-xxl my-4 my-xl-6 py-6 pb-0" style="background-color: #f0f2f4c3">
+  <div class=" my-4 my-xl-6 py-6 " style="background-color: #f0f2f4c3 ;">
     <div class="container">
       <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px">
         <h6 class="text-primary text-uppercase mb-2">Trending Courses</h6>
@@ -1450,10 +1430,10 @@
               </ol>
             </div>
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-              <img class="img-fluid border-r10" src="./img/DgcaCpl.png" alt="" />
+              <img class="img-fluid border-r10" src="./img/DgcaCpl2.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                  href="./inidvidual-clases/dgcaground.html">Read More</a>
+                  href="./individual-classes/dgcaground.html">Read More</a>
               </div>
             </div>
           </div>
@@ -1478,7 +1458,7 @@
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
               <img class="img-fluid border-r10" src="./img/pilot_pitcure.png" alt="" />
               <div class="courses-overlay">
-                <a class="btn btn-outline-primary border-2 courses-btn-bg" href="./inidvidual-clases/RTR.html">Read
+                <a class="btn btn-outline-primary border-2 courses-btn-bg" href="./individual-classes/RTR.html">Read
                   More</a>
               </div>
             </div>
@@ -1505,7 +1485,7 @@
               <img class="img-fluid border-r10" src="./img/nios-prepclasses.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                  href="./inidvidual-clases/niosclasses.html">Read More</a>
+                  href="./individual-classes/niosclasses.html">Read More</a>
               </div>
             </div>
           </div>
@@ -1533,7 +1513,7 @@
               <img class="img-fluid border-r10" src="./img/pilot_pitcure.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                  href="./inidvidual-clases/pretyping.html">Read More</a>
+                  href="./individual-classes/pretyping.html">Read More</a>
               </div>
             </div>
           </div>
@@ -1561,7 +1541,7 @@
               <img class="img-fluid border-r10" src="./img/cource1.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                  href="./inidvidual-clases/pretyping.html">Read More</a>
+                  href="./individual-classes/pretyping.html">Read More</a>
               </div>
             </div>
           </div>
@@ -1818,8 +1798,8 @@
           </div>
         </div>
       </div> -->
-      <!-- Team Testimonial Start mobile-->
-      <!-- <div class="row justify-content-center d-md-none">
+  <!-- Team Testimonial Start mobile-->
+  <!-- <div class="row justify-content-center d-md-none">
         <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <div class="owl-carousel testimonial-carousel">
             <div class="testimonial-item text-center">
@@ -1900,7 +1880,7 @@
                   animation-delay: 0.2s;
                   animation-name: fadeInLeft;
                 ">
-              <h3 class="f-title f_600 t_color f_size_18">Contact</h3>
+              <h3 class="f_600 t_color f_size_18">Contact</h3>
               <p>
                 <i class="fa fa-map-marker-alt me-2"></i>Bengaluru, Karnataka
               </p>
@@ -1920,8 +1900,8 @@
                   animation-delay: 0.4s;
                   animation-name: fadeInLeft;
                 ">
-              <h3 class="f-title f_600 t_color f_size_18">Courses</h3>
-              <ul class="list-unstyled f_list">
+              <h3 class="f_600 t_color f_size_18">Courses</h3>
+              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;">
                 <li><a href="#">A320 Pre Type Rating Class</a></li>
                 <li><a href="#">DGCA Ground Classes</a></li>
                 <li><a href="#">Radio Telephony (RTR) Class</a></li>
@@ -1937,8 +1917,8 @@
                   animation-delay: 0.6s;
                   animation-name: fadeInLeft;
                 ">
-              <h3 class="f-title f_600 t_color f_size_18">Help</h3>
-              <ul class="list-unstyled f_list">
+              <h3 class="f_600 t_color f_size_18">Help</h3>
+              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;">
                 <li>
                   <a href="./testComponents/about.html">About us</a>
                 </li>
