--- a/adynamics3/testComponents/about.html
+++ b/adynamics3/testComponents/about.html
@@ -84,10 +84,10 @@
         <div class="dropdown">
           <a href="../testComponents/classes.html" class="nav-item nav-link nav-dropdown ">Classes</a>
           <div class="dropdown-menu">
-            <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-            <a href="../inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
-            <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
-            <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
+            <a href="../individual-classes/pretyping.html">A320 Pre Type Rating Class</a>
+            <a href="../individual-classes/dgcaground.html">DGCA Ground Classes</a>
+            <a href="../individual-classes/RTR.html">Radio Telephony (RTR) Class</a>
+            <a href="../individual-classes/niosclasses.html">NIOS Prep Class</a>
           </div>
         </div>
         <a href="../blog/homepageblog.html" class="nav-item nav-link">blog</a>
@@ -229,7 +229,7 @@
   <!-- Features End -->
 
   <!-- Contact Start -->
-  <div class="container-xxl py-6 to">
+  <div class="container-xxl py-6 to" id="contact">
     <div class="container ">
       <div class="row g-5">
         <div class="col-lg-6 textress wow fadeInUp" data-wow-delay="0.1s">
@@ -256,8 +256,8 @@
                   <div class="address details chan">
                     <i class="fas fa-map-marker-alt"></i>
                     <div class="topic">Address</div>
-                    <div class="text-one">Office No.3 , 2nd floor, SNN Raj Pinnacle, Whitefield</div>
-                    <div class="text-two">Bengaluru, Karnataka 560048</div>
+                    <div class="text-one">Office No.3, 2nd floor, SNN Raj Pinnacle, Whitefield</div>
+                    <div class="text-one">Bengaluru, Karnataka 560048</div>
                   </div>
                   <div class="phone details">
                     <i class="fas fa-phone"></i>
@@ -268,7 +268,8 @@
                   <div class="email details">
                     <i class="fas fa-envelope"></i>
                     <div class="topic">Email</div>
-                    <div class="text-one">info@adynamics.in</div>
+                    <div class="text-one"><a href="mailto:himanshu@adynamics.in">himanshu@adynamics.in</a></div>
+                    <div class="text-one"><a href="mailto:kriti@adynamics.in">kriti@adynamics.in</a></div>
 
                   </div>
                 </div>
@@ -318,8 +319,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s"
               style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Courses</h3>
-              <ul class="list-unstyled f_list">
+              <h3 class="f_600 t_color f_size_18">Courses</h3>
+              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;" >
                 <li><a href="#">A320 Pre Type Rating Class</a></li>
                 <li><a href="#">DGCA Ground Classes</a></li>
                 <li><a href="#">Radio Telephony (RTR) Class</a></li>
@@ -332,8 +333,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s"
               style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Help</h3>
-              <ul class="list-unstyled f_list">
+              <h3 class="f_600 t_color f_size_18">Help</h3>
+              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;" >
                 <li><a href="./testComponents/about.html">About us</a></li>
                 <li><a href="#testi">Testimonial</a></li>
                 <li><a href="#teamm">Team</a></li>
