--- a/adynamics3/testComponents/classes.html
+++ b/adynamics3/testComponents/classes.html
@@ -80,10 +80,10 @@
         <div class="dropdown">
           <a href="../testComponents/classes.html" class="nav-item nav-link nav-dropdown active">Classes</a>
           <div class="dropdown-menu">
-            <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-            <a href="../inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
-            <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
-            <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
+            <a href="../individual-classes/pretyping.html">A320 Pre Type Rating Class</a>
+            <a href="../individual-classes/dgcaground.html">DGCA Ground Classes</a>
+            <a href="../individual-classes/RTR.html">Radio Telephony (RTR) Class</a>
+            <a href="../individual-classes/niosclasses.html">NIOS Prep Class</a>
           </div>
         </div>
         <a href="../blog/homepageblog.html" class="nav-item nav-link">blog</a>
@@ -134,7 +134,7 @@
               <img class="img-fluid border-r10" src="../img/cource1.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                  href="../inidvidual-clases/pretyping.html">Read More</a>
+                  href="../individual-classes/pretyping.html">Read More</a>
               </div>
             </div>
           </div>
@@ -160,7 +160,7 @@
               <img class="img-fluid border-r10" src="../img/DgcaCpl3.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                  href="../inidvidual-clases/dgcaground.html">Read More</a>
+                  href="../individual-classes/dgcaground.html">Read More</a>
               </div>
             </div>
           </div>
@@ -187,7 +187,7 @@
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
               <img class="img-fluid border-r10" src="../img/rtrclasses.png" alt="" />
               <div class="courses-overlay">
-                <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/RTR.html">Read
+                <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../individual-classes/RTR.html">Read
                   More</a>
               </div>
             </div>
@@ -216,7 +216,7 @@
               <img class="img-fluid border-r10" src="../img/nios-prepclasses.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                  href="../inidvidual-clases/niosclasses.html">Read More</a>
+                  href="../individual-classes/niosclasses.html">Read More</a>
               </div>
             </div>
           </div>
@@ -249,8 +249,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s"
               style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Courses</h3>
-              <ul class="list-unstyled f_list">
+              <h3 class="f_600 t_color f_size_18">Courses</h3>
+              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;" >
                 <li><a href="#">A320 Pre Type Rating Class</a></li>
                 <li><a href="#">DGCA Ground Classes</a></li>
                 <li><a href="#">Radio Telephony (RTR) Class</a></li>
@@ -263,8 +263,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s"
               style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Help</h3>
-              <ul class="list-unstyled f_list">
+              <h3 class="f_600 t_color f_size_18">Help</h3>
+              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;" >
                 <li><a href="./testComponents/about.html">About us</a></li>
                 <li><a href="#testi">Testimonial</a></li>
                 <li><a href="#teamm">Team</a></li>
