--- a/adynamics3/testComponents/about.html
+++ b/adynamics3/testComponents/about.html
@@ -268,9 +268,7 @@
                   <div class="email details">
                     <i class="fas fa-envelope"></i>
                     <div class="topic">Email</div>
-                    <div class="text-one"><a href="mailto:himanshu@adynamics.in">himanshu@adynamics.in</a></div>
-                    <div class="text-one"><a href="mailto:kriti@adynamics.in">kriti@adynamics.in</a></div>
-
+                    <div class="text-one"><a href="mailto:himanshu@adynamics.in">info@adynamics.in</a></div>
                   </div>
                 </div>
               </div>
@@ -304,16 +302,9 @@
             <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
               style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
               <h3 class="f-title f_600 t_color f_size_18">Contact</h3>
-              <p><i class="fa fa-map-marker-alt me-2"></i>Bengaluru, Karnataka </p>
-              <p><i class="fa-solid fa-phone me-2"></i>+91-8296076136 </p>
-              <p style="display:flex;">
-                <i class="fa-solid fa-envelope me-2" style="padding-top:6px;"></i>
-                <span>
-                <a href="mailto:himanshu@adynamics.in">himanshu@adynamics.in</a>
-                <a href="mailto:kriti@adynamics.in">kriti@adynamics.in</a>
-                </span>
-              </p>
-
+                <p><i class="fa fa-map-marker-alt me-2"></i>Bengaluru, Karnataka </p>
+                <p><i class="fa-solid fa-phone me-2"></i>+91-8296076136 </p>
+                <p><a href="mailto:himanshu@adynamics.in"><i class="fa-solid fa-envelope me-2"></i>info@adynamics.com</a></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
@@ -321,12 +312,12 @@
               style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
               <h3 class="f_600 t_color f_size_18">Courses</h3>
               <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;" >
-                <li><a href="#">A320 Pre Type Rating Class</a></li>
-                <li><a href="#">DGCA Ground Classes</a></li>
-                <li><a href="#">Radio Telephony (RTR) Class</a></li>
-                <li><a href="#">NIOS Prep Class</a></li>
-                <li><a href="#">CPL Conversion</a></li>
-                <li><a href="#">sacAA CPL</a></li>
+                <li><a href="../individual-classes/pretyping.html">A320 Pre Type Rating Class</a></li>
+                <li><a href="../individual-classes/dgcaground.html">DGCA Ground Classes</a></li>
+                <li><a href="../individual-classes/RTR.html">Radio Telephony (RTR) Class</a></li>
+                <li><a href="../individual-classes/niosclasses.html">NIOS Prep Class</a></li>
+                <li><a href="../individual-classes/conversion.html">CPL Conversion</a></li>
+                <li><a href="../individual-classes/cplsouth.html">sacAA CPL</a></li>
               </ul>
             </div>
           </div>
@@ -335,12 +326,12 @@
               style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
               <h3 class="f_600 t_color f_size_18">Help</h3>
               <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;" >
-                <li><a href="./testComponents/about.html">About us</a></li>
-                <li><a href="#testi">Testimonial</a></li>
-                <li><a href="#teamm">Team</a></li>
+                <li><a href="./about.html">About us</a></li>
+                <li><a href="../index.html#testi">Testimonial</a></li>
+                <!-- <li><a href="#teamm">Team</a></li> -->
                 <li><a href="#demo">Demo video</a></li>
-                <li><a href="./testComponents/about.html">Contact</a></li>
-                <li><a href="./testComponents/classes.html">Training</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="./classes.html">Training</a></li>
               </ul>
             </div>
           </div>
@@ -349,10 +340,9 @@
               style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
               <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
               <div class="f_social_icon">
-                <a href="#" class="fab fa-facebook"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-linkedin"></a>
-                <a href="#" class="fab fa-pinterest"></a>
+                <a href="https://www.facebook.com/people/ADynamics/100070159968453/" class="fab fa-facebook"></a>
+                <a href="https://www.linkedin.com/company/adynamics-aviation/" class="fab fa-linkedin"></a>
+                <a href="https://www.youtube.com/@ADynamics_class/" class="fab fa-youtube"></a>
               </div>
             </div>
           </div>
@@ -364,9 +354,8 @@
   </footer>
 
   <!-- Footer End -->
-
   <!-- Back to Top -->
-  <a href="" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-whatsapp"></i></a>
+  <a href="https://wa.me/8296076136?text=Hello!%20I%20would%20like%20to%20chat%20with%20you." class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-whatsapp"></i></a>
   <!-- JavaScript Libraries -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
