--- a/adynamics3/enquiry.html
+++ b/adynamics3/enquiry.html
@@ -217,7 +217,7 @@
 
   <!-- Footer End -->
 
-    <a href="" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-whatsapp"></i></a>
+    <a href="https://wa.me/8296076136?text=Hello!%20I%20would%20like%20to%20chat%20with%20you." class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-whatsapp"></i></a>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -230,14 +230,6 @@
     <script src="./js/main.js"></script>
     <script src="./assets/js/main.js"></script>
 
-    <script>
-        $(document).ready(function () {
-            $("#enquiryForm").submit(function () {
-                alert("Thank You For Your Feedback");
-                document.getElementById("survey-form").reset();
-            });
-        });
-    </script>
 </body>
 
 </html>
