--- a/adynamics3/index.html
+++ b/adynamics3/index.html
@@ -1689,13 +1689,10 @@
                 <div class="col-lg-7 personail" data-wow-delay="0.1s">
                   <div class="employee_name">
                     <h5>Dhruv</h5>
-                    <span>Profession</span>
+                    <!-- <span>Profession</span> -->
                   </div>
-                  <p>
-                    "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Temporibus voluptatem, quos, quae, quidem, doloremque quia
-                    pariatur harum ea amet quibusdam quisquam, quae,
-                    temporibus dolores porro doloribus."
+                  <p style="padding-inline:30px;">
+                    The program here is top-notch, with a curriculum that is both challenging and deeply engaging. The instructors bring a wealth of real-world experience, making every lesson both practical and inspiring. ADynamics has provided me with a strong foundation and the confidence to pursue my aviation dreams. I’m incredibly grateful to be part of this fantastic training program and excited for what’s ahead!
                   </p>
                 </div>
                 <div class="col-lg-5" data-wow-delay="0.3s">
@@ -1710,13 +1707,10 @@
                 <div class="col-lg-7 personail" data-wow-delay="0.1s">
                   <div class="employee_name">
                     <h5>Ajesh</h5>
-                    <span>Profession</span>
+                    <!-- <span>Profession</span> -->
                   </div>
-                  <p>
-                    "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Temporibus voluptatem, quos, quae, quidem, doloremque quia
-                    pariatur harum ea amet quibusdam quisquam, quae,
-                    temporibus dolores porro doloribus."
+                  <p style="padding-inline:30px;">
+                    From the very first day, I've been thoroughly impressed with the quality of the instruction and the comprehensive curriculum. The instructors are not only highly knowledgeable but also incredibly supportive, ensuring we grasp every concept thoroughly. I'm excited to continue my journey here and can't wait to see what the future holds. Thank you, ADynamics, for providing such an outstanding training experience!
                   </p>
                 </div>
                 <div class="col-lg-5" data-wow-delay="0.3s">
@@ -1870,86 +1864,62 @@
   <!-- Team  End -->
 
   <!-- Footer Start -->
-  <footer class="new_footer_area bg_color ft_mar">
+  <footer class="new_footer_area bg_color  ft_mar">
     <div class="new_footer_top">
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6">
-            <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="
-                  visibility: visible;
-                  animation-delay: 0.2s;
-                  animation-name: fadeInLeft;
-                ">
-              <h3 class="f_600 t_color f_size_18">Contact</h3>
-              <p>
-                <i class="fa fa-map-marker-alt me-2"></i>Bengaluru, Karnataka
-              </p>
-              <p><i class="fa-solid fa-phone me-2"></i>+91-8296076136</p>
-              <p style="display: flex">
-                <i class="fa-solid fa-envelope me-2" style="padding-top: 6px"></i>
-                <span>
-                  <a href="mailto:himanshu@adynamics.in">himanshu@adynamics.in</a>
-                  <a href="mailto:kriti@adynamics.in">kriti@adynamics.in</a>
-                </span>
-              </p>
+            <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
+              style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+              <h3 class="f-title f_600 t_color f_size_18">Contact</h3>
+                <p><i class="fa fa-map-marker-alt me-2"></i>Bengaluru, Karnataka </p>
+                <p><i class="fa-solid fa-phone me-2"></i>+91-8296076136 </p>
+                <p><a href="mailto:himanshu@adynamics.in"><i class="fa-solid fa-envelope me-2"></i>info@adynamics.com</a></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="
-                  visibility: visible;
-                  animation-delay: 0.4s;
-                  animation-name: fadeInLeft;
-                ">
+            <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s"
+              style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
               <h3 class="f_600 t_color f_size_18">Courses</h3>
-              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;">
-                <li><a href="#">A320 Pre Type Rating Class</a></li>
-                <li><a href="#">DGCA Ground Classes</a></li>
-                <li><a href="#">Radio Telephony (RTR) Class</a></li>
-                <li><a href="#">NIOS Prep Class</a></li>
-                <li><a href="#">CPL Conversion</a></li>
-                <li><a href="#">sacAA CPL</a></li>
+              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;" >
+                <li><a href="./individual-classes/pretyping.html">A320 Pre Type Rating Class</a></li>
+                <li><a href="./individual-classes/dgcaground.html">DGCA Ground Classes</a></li>
+                <li><a href="./individual-classes/RTR.html">Radio Telephony (RTR) Class</a></li>
+                <li><a href="./individual-classes/niosclasses.html">NIOS Prep Class</a></li>
+                <li><a href="./individual-classes/conversion.html">CPL Conversion</a></li>
+                <li><a href="./individual-classes/cplsouth.html">sacAA CPL</a></li>
               </ul>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="
-                  visibility: visible;
-                  animation-delay: 0.6s;
-                  animation-name: fadeInLeft;
-                ">
+            <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s"
+              style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
               <h3 class="f_600 t_color f_size_18">Help</h3>
-              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;">
-                <li>
-                  <a href="./testComponents/about.html">About us</a>
-                </li>
+              <ul class="list-unstyled f_list" style="font-size: 1rem;margin-block:1rem;" >
+                <li><a href="./testComponents/about.html">About us</a></li>
                 <li><a href="#testi">Testimonial</a></li>
                 <!-- <li><a href="#teamm">Team</a></li> -->
                 <li><a href="#demo">Demo video</a></li>
-                <li>
-                  <a href="./testComponents/about.html">Contact</a>
-                </li>
+                <li><a href="./testComponents/about.html#contact">Contact</a></li>
                 <li><a href="./testComponents/classes.html">Training</a></li>
               </ul>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s" style="
-                  visibility: visible;
-                  animation-delay: 0.8s;
-                  animation-name: fadeInLeft;
-                ">
+            <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s"
+              style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
               <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
               <div class="f_social_icon">
-                <a href="#" class="fab fa-facebook"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-linkedin"></a>
-                <a href="#" class="fab fa-pinterest"></a>
+                <a href="https://www.facebook.com/people/ADynamics/100070159968453/" class="fab fa-facebook"></a>
+                <a href="https://www.linkedin.com/company/adynamics-aviation/" class="fab fa-linkedin"></a>
+                <a href="https://www.youtube.com/@ADynamics_class/" class="fab fa-youtube"></a>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="footer_bg"></div>
+      <div class="footer_bg">
+      </div>
     </div>
   </footer>
 
@@ -1960,7 +1930,7 @@
   <!-- Copyright End -->
 
   <!-- Back to Top -->
-  <a href="" class="btn btn-lg btn-primary btn-lg-square back-to-top" style="background-color: #49aaaa"><i
+  <a href="https://wa.me/8296076136?text=Hello!%20I%20would%20like%20to%20chat%20with%20you." class="btn btn-lg btn-primary btn-lg-square back-to-top" style="background-color: #49aaaa"><i
       class="bi bi-whatsapp"></i></a>
 
   <!-- JavaScript Libraries -->
