--- a/adynamics3/individual-classes/RTR.html
+++ b/adynamics3/individual-classes/RTR.html
@@ -694,7 +694,7 @@
   <!-- Copyright End -->
 
   <!-- Back to Top -->
-  <a href="" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-whatsapp"></i></a>
+  <a href="https://wa.me/8296076136?text=Hello!%20I%20would%20like%20to%20chat%20with%20you." class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-whatsapp"></i></a>
 
   <!-- JavaScript Libraries -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
